Fix podcast search result text readability by upping opacity

--- a/app/assets/stylesheets/featured.scss
+++ b/app/assets/stylesheets/featured.scss
@@ -72,10 +72,14 @@
   border-bottom: 1px solid transparent;
   margin-top: 20px;
 }
-
-#grid-artist:hover {
+grid-artist #grid-artist:hover {
   opacity: 1;
   border-bottom: 1px solid white;
+}
+
+#search-grid-artist {
+  @extend #grid-artist;
+  opacity: 1;
 }
 
 #grid-genre {
